# GPR-450-Final

./: CMakeLists.txt
assignments/GPR-450_Final/: CMakeLists.txt  main.cpp
assignments/GPR-450_Final/assets/: crayfoish_animations.txt  crayfoish_mesh.fbx  crayfoish_mesh_rig.fbx  lit.frag  lit.vert  weightPaint.frag  weightPaint.vert
core/: CMakeLists.txt
core/ew/: mesh.cpp  mesh.h  model.cpp  shader.cpp  shader.h
core/gorp/: Hierarchy.cpp  Hierarchy.h  Transform.cpp  Transform.h  anims.h  clipCtrl.cpp  clipCtrl.h  hierarchy.cpp  hierarchy.h  hierarchyList.cpp  hierarchyList.h  hierarchyNode.cpp  hierarchyNode.h  hierarchyObj.cpp  hierarchyObj.h  hierarchyState.cpp  hierarchyState.h  htrLoader.cpp  htrLoader.h  keyframe.cpp  keyframe.h  kinematics.cpp  kinematics.h  transform.cpp  transform.h
